# xscope_fileio

./: .gitignore  CHANGELOG.rst  Jenkinsfile  README.md  README.rst  index.rst  pyproject.toml  requirements.txt  settings.yml  setup.py
doc/: 00_quickstart.rst  01_device.rst  02_host.rst  Doxyfile.inc  build_docs.sh  exclude_patterns.inc  index.rst  substitutions.inc
example/: Makefile  run_example.py  test.xc
examples/: CMakeLists.txt
examples/fileio_feature_close/: CMakeLists.txt  README.rst  config.xscope  run_example.py
examples/fileio_feature_close/src/: test.c
examples/fileio_features_xc/: CMakeLists.txt  Makefile  README.rst  config.xscope  run_example.py  test.xc
examples/fileio_features_xc/src/: test.xc
examples/minimal/: CMakeLists.txt  main.c  run.py
examples/throughput_c/: CMakeLists.txt  Makefile  README.rst  config.xscope  fileio_test.xe  main.c  run_example.py  test.c
examples/throughput_c/src/: main.c
host/: .gitignore  CMakeLists.txt  Makefile  README.rst  build_host.py  xscope_io_host.c
src_xcore/: config.xscope  xscope_io_common.h  xscope_io_device.c  xscope_io_device.h
tests/: CMakeLists.txt  compare_bins.py  conftest.py  pytest.ini  test_close_files.py  test_features.py  test_features_xc_sim.py  test_no_hang.py  test_simple.py  test_throughput.py  test_version_check.py
tests/close_files/: CMakeLists.txt  README.rst  config.xscope
tests/close_files/src/: main.c  main.xc  test.c
tests/no_hang/: CMakeLists.txt  README.rst  main.c  make.sh
tests/no_hang/src/: main.c  main.xc
tests/simple/: CMakeLists.txt  README.rst
tests/simple/src/: main.c
xscope_file_io/: __init__.py
xscope_file_io/host_src/: Makefile
xscope_fileio/: __init__.py  _hatch_build.py  build_host.py  lib_build_info.cmake  module_build_info  xscope_io_common.h
xscope_fileio/api/: xscope_io_device.h
xscope_fileio/host/: Makefile  xscope_io_host.c
xscope_fileio/src/: xscope_io_device.c
