[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "xscope-fileio"
version = "1.3.1"
description = "Python module for managing files using xscope"
authors = [{name = "XMOS"}]
license = {file = "LICENSE.rst"}
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/xmos/xscope_fileio"

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = ["python host/build_host.py"]
artifacts = []

[tool.hatch.build.targets.wheel.force-include]
"host" = "xscope_fileio/host"

[tool.hatch.build.hooks.custom] # dynamic wheel name
path = "xscope_fileio/_hatch_build.py"
